modified ready for live test

--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -54,7 +54,7 @@
                     <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Create your account.</h1>
                       <p>Just a few more steps and you're done!</p>
                   </div>
-                  <form class="user" method="get" action="UserInfo.html">
+                  <form class="user" method="get" action="userinfo">
                       <input id="plan" name="plan" hidden>
                       <div class="text-center">
                         <div class="form-group">
