--- a/views/CreateYourAccount.ejs
+++ b/views/CreateYourAccount.ejs
@@ -54,7 +54,7 @@
                       <div class="stepsText">Step <b>2</b> of <b>3</b></div>
                     <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Create your account.</h1>
                   </div>
-                  <form class="user" method="get" action="Account.html">
+                  <form class="user" method="get" action="account">
                       <input id="plan" name="plan" hidden>
                       <div class="text-center">
                         <div class="contextBody">
