--- a/views/Plans.ejs
+++ b/views/Plans.ejs
@@ -55,7 +55,7 @@
                     <h1 class="h4 mb-4 signinHeader">Choose a plan that's right for you.</h1>
                       <p>Downgrade or upgrade at any time</p>
                   </div>
-                  <form class="user" method="get" action="CreateYourAccount.html">
+                  <form class="user" method="get" action="createaccount">
                       <div class="text-center">
                         <div class="row contextBody-2">
                             <input id="plan" name="plan" hidden value="1">
