--- a/views/SetUpYourPayment.ejs
+++ b/views/SetUpYourPayment.ejs
@@ -73,15 +73,15 @@
                     </div>
                 </div>
                   
-                <form class="user" method="get" action="card.html">
+                <form class="user" method="get" action="card">
                     <input id="plan" name="plan" hidden>
                     <div class="row justify-content-center">
-                        <button type="submit" id="sumbitBtn" class="btn btn-danger btn-user paymentBtn" href="card.html"> Credit or Debit Card <i class="fas fa-2x fa-credit-card"></i></button>
+                        <button type="submit" id="sumbitBtn" class="btn btn-danger btn-user paymentBtn" href="card"> Credit or Debit Card <i class="fas fa-2x fa-credit-card"></i></button>
                     </div>
                   </form>
                   
                   <div class="row justify-content-center">
-                      <a class="btn btn-danger btn-user paymentBtn-2" href="ActivationCode.html"> Activation Code <i class="fas fa-2x fa-key"></i></a>
+                      <a class="btn btn-danger btn-user paymentBtn-2" href="activationcode"> Activation Code <i class="fas fa-2x fa-key"></i></a>
                   </div>
               </div>
             </div>
