--- a/views/UserInfo.ejs
+++ b/views/UserInfo.ejs
@@ -53,7 +53,7 @@
                     <h1 class="h4 mb-4 signinHeader" style="white-space: nowrap;">Creating your account.</h1>
                       <p>We need your information to accurately calculate the number of calories burned and heart rate</p>
                   </div>
-                  <form class="user" method="get" action="SetUpYourPayment.html">
+                  <form class="user" method="get" action="payment">
                       <input id="plan" name="plan" hidden>
                       
                       <div  class="text-center" style="margin: auto;">
