--- a/views/ChooseYourPlan.ejs
+++ b/views/ChooseYourPlan.ejs
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                       <br>
-                    <a href="Plans.html" class="btn btn-danger btn-user btn-block signupText">
+                    <a href="plans" class="btn btn-danger btn-user btn-block signupText">
                       See the Plans
                     </a>
                   </form>
