--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -58,7 +58,7 @@
                       <input id="plan" name="plan" hidden>
                       <div class="text-center">
                         <div class="form-group">
-                          <input type="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                          <input type="email" name="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
                         </div>
                           <br>
                         <div class="form-group">
