--- a/views/SetUpYourPayment.ejs
+++ b/views/SetUpYourPayment.ejs
@@ -75,6 +75,8 @@
                   
                 <form class="user" method="get" action="card">
                     <input id="plan" name="plan" hidden>
+                    <input name="uinfo" value="<%= uinfo %>" type="hidden">
+                    <input name="uinfo2" value="<%= uinfo2 %>" type="hidden">
                     <div class="row justify-content-center">
                         <button type="submit" id="sumbitBtn" class="btn btn-danger btn-user paymentBtn" href="card"> Credit or Debit Card <i class="fas fa-2x fa-credit-card"></i></button>
                     </div>
