fixed signup and menmbership

--- a/views/FinishedSignUp.ejs
+++ b/views/FinishedSignUp.ejs
@@ -67,7 +67,7 @@
                     </div>
                       <br>
                     <a href="login.html" class="btn btn-danger btn-user btn-block signupText">
-                      Start Menmbership
+                      Start Membership
                     </a>
                   </form>
                 </div>
