--- a/views/Plans.ejs
+++ b/views/Plans.ejs
@@ -64,28 +64,28 @@
                                  <button type="button" id="ReflectYearly" class="col col-lg-2 btn btn-danger optionBtn">Reflect Yearly</button>
                         </div>
                         <div class="row border-bottom border-dark contextBody-2">
-                          <p class="cb-2 cbText">Monthly Price after your first free month</p>
-                            <p class="cb-Mobile">Price</p>
+                          <p class="cb-2 cbText">Cost after Trial</p>
+                            <p class="cb-Mobile">Cost after Trial</p>
                                 <div class="col cb-2"></div>
                                  <div class="col col-lg-2 cb-2"></div>
                                  <div id="ReflectMonthlyPrice" class="col col-lg-2 cb-2 activey">39.99</div>
                                  <div id="ReflectYearlyPrice" class="col col-lg-2 cb-2 ">399.99</div>
                         </div>
                           <div class="row border-bottom border-dark contextBody-2">
-                              <p class="cb-2 cbText">HD available</p>
-                                <p class="cb-Mobile">HD available</p>
+                              <p class="cb-2 cbText">Live Streaming Workouts</p>
+                                <p class="cb-Mobile">Live Streaming Workouts</p>
                                 <div class="col cb-2"></div>
                                  <div class="col col-lg-2 cb-2"></div>
                                  <div id="ReflectMonthlyFeature1" class="col col-lg-2 cb-2 activey"><i class="fas fa-check"></i></div>
                                  <div id="ReflectYearlyFeature1" class="col col-lg-2 cb-2"><i class="fas fa-check"></i></div>
                         </div>
                           <div class="row border-bottom border-dark contextBody-2">
-                              <p class="cb-2 cbText">Screens you can watch on at the same time</p>
-                              <p class="cb-Mobile">Screens</p>
+                              <p class="cb-2 cbText">On Demand Workouts</p>
+                              <p class="cb-Mobile">On Demand Workouts</p>
                                 <div class="col cb-2"></div>
                                  <div class="col col-lg-2 cb-2"></div>
-                                 <div id="ReflectMonthlyFeature2" class="col col-lg-2 cb-2 activey">2</div>
-                                 <div id="ReflectYearlyFeature2" class="col col-lg-2 cb-2">4</div>
+                                 <div id="ReflectMonthlyFeature2" class="col col-lg-2 cb-2 activey"><i class="fas fa-check"></i></div>
+                                 <div id="ReflectYearlyFeature2" class="col col-lg-2 cb-2"><i class="fas fa-check"></i></div>
                             <div></div>
                         </div>
                        </div>
