converted back to ejs

--- a/views/FinishedSignUp.ejs
+++ b/views/FinishedSignUp.ejs
@@ -55,19 +55,17 @@
                       <input id="plan" name="plan" hidden>
                       <div class="text-center">
                         <div class="contextBox">
-                            <a href="Plans.html" class="editOption"><p>Change Plan</p></a>
                             <p class="titleOne">Reflect Monthly</p>
                             <p class="titleTwo">39.99</p>
                         </div>
                         <div class="contextBox">
-                            <a href="editPayment.html" class="editOption"><p>Edit Payment</p></a>
                             <p class="titleOne-2">Firstname Lastname</p>
                             <p class="titleTwo-2">VISA ending in 4747</p>
                         </div>
                     </div>
                       <br>
                     <a href="login.html" class="btn btn-danger btn-user btn-block signupText">
-                      Start Membership
+                      Start Your Class Now
                     </a>
                   </form>
                 </div>
@@ -81,6 +79,92 @@
     </div>
 
   </div>
+    
+<!-- Footer -->
+<footer class="page-footer font-small footerCustom">
+
+      <!-- Footer Links -->
+  <div class="container text-center">
+
+    <!-- Grid row -->
+    <div class="row justify-content-center">
+        
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Terms of use</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Privacy</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">FAQ</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Help Center</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+    
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">
+      <a href="https://echelonfit.com/">© 2019 Echelon Fitness LLC. All rights reserved. Patent pending.</a> 
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+
 
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
