--- a/views/Plans.ejs
+++ b/views/Plans.ejs
@@ -60,36 +60,40 @@
                         <div class="row contextBody-2">
                             <input id="plan" name="plan" hidden value="1">
                                 <div class="col mobileHide"></div>
-                                 <button type="button" id="ReflectMonthly" class="col col-lg-2 btn btn-danger optionBtn active ">Reflect Monthly</button>
+                                 <button type="button" id="ReflectMonthly" class="col col-lg-2 btn btn-danger optionBtn active">Reflect Monthly</button>
                                  <button type="button" id="ReflectYearly" class="col col-lg-2 btn btn-danger optionBtn">Reflect Yearly</button>
                         </div>
                         <div class="row border-bottom border-dark contextBody-2">
                           <p class="cb-2 cbText">Cost after Trial</p>
                             <p class="cb-Mobile">Cost after Trial</p>
-                                <div class="col cb-2"></div>
-                                 <div class="col col-lg-2 cb-2"></div>
-                                 <div id="ReflectMonthlyPrice" class="col col-lg-2 cb-2 activey">39.99</div>
-                                 <div id="ReflectYearlyPrice" class="col col-lg-2 cb-2 ">399.99</div>
+                                <div class="col cb-2 mobileHide"></div>
+                                 <div class="col col-lg-2 cb-2 mobileHide"></div>
+                                 <div id="ReflectMonthlyPrice" class="col col-lg-2 cb-2 borderCustom activey">39.99</div>
+                                 <div id="ReflectYearlyPrice" class="col col-lg-2 cb-2 notActivey">399.99</div>
                         </div>
                           <div class="row border-bottom border-dark contextBody-2">
                               <p class="cb-2 cbText">Live Streaming Workouts</p>
                                 <p class="cb-Mobile">Live Streaming Workouts</p>
-                                <div class="col cb-2"></div>
-                                 <div class="col col-lg-2 cb-2"></div>
-                                 <div id="ReflectMonthlyFeature1" class="col col-lg-2 cb-2 activey"><i class="fas fa-check"></i></div>
-                                 <div id="ReflectYearlyFeature1" class="col col-lg-2 cb-2"><i class="fas fa-check"></i></div>
+                                <div class="col cb-2 mobileHide"></div>
+                                 <div class="col col-lg-2 cb-2 mobileHide"></div>
+                                 <div id="ReflectMonthlyFeature1" class="col col-lg-2 cb-2 borderCustom activey"><i class="fas fa-check"></i></div>
+                                 <div id="ReflectYearlyFeature1" class="col col-lg-2 cb-2 notActivey"><i class="fas fa-check"></i></div>
                         </div>
                           <div class="row border-bottom border-dark contextBody-2">
                               <p class="cb-2 cbText">On Demand Workouts</p>
                               <p class="cb-Mobile">On Demand Workouts</p>
-                                <div class="col cb-2"></div>
-                                 <div class="col col-lg-2 cb-2"></div>
-                                 <div id="ReflectMonthlyFeature2" class="col col-lg-2 cb-2 activey"><i class="fas fa-check"></i></div>
-                                 <div id="ReflectYearlyFeature2" class="col col-lg-2 cb-2"><i class="fas fa-check"></i></div>
+                                <div class="col cb-2 mobileHide"></div>
+                                 <div class="col col-lg-2 cb-2 mobileHide"></div>
+                                 <div id="ReflectMonthlyFeature2" class="col col-lg-2 cb-2 borderCustom activey"><i class="fas fa-check"></i></div>
+                                 <div id="ReflectYearlyFeature2" class="col col-lg-2 cb-2 notActivey"><i class="fas fa-check"></i></div>
                             <div></div>
                         </div>
                        </div>
                       <br><br>
+                      <div class="row justify-content-center">
+                          <p>Streaming Reflect workout availability subject to your Internet service and device capabilities. See 
+                            <a style="color: blue;" href="https://echelonfit.com/pages/terms-and-conditions">Terms of Use</a> for more details.</p>
+                      </div>
                     <button type="submit" class="btn btn-danger btn-user btn-block signupText signupbtn">
                       Continue
                     </button>
@@ -127,7 +131,93 @@
     </div>
 
   </div>
+    
+<!-- Footer -->
+<footer class="page-footer font-small footerCustom">
 
+      <!-- Footer Links -->
+  <div class="container text-center">
+
+    <!-- Grid row -->
+    <div class="row justify-content-center">
+        
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Terms of use</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Privacy</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">FAQ</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Help Center</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+    
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">
+      <a href="https://echelonfit.com/">© 2019 Echelon Fitness LLC. All rights reserved. Patent pending.</a> 
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+
+    
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
