--- a/views/ActivationCode.ejs
+++ b/views/ActivationCode.ejs
@@ -75,6 +75,92 @@
 
   </div>
 
+<!-- Footer -->
+<footer class="page-footer font-small fixed-bottom footerCustom">
+
+      <!-- Footer Links -->
+  <div class="container text-center">
+
+    <!-- Grid row -->
+    <div class="row justify-content-center">
+        
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Terms of use</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Privacy</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">FAQ</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Help Center</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+    
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">
+      <a href="https://echelonfit.com/">© 2019 Echelon Fitness LLC. All rights reserved. Patent pending.</a> 
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+
+    
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
