--- a/views/ChooseYourPlan.ejs
+++ b/views/ChooseYourPlan.ejs
@@ -49,7 +49,7 @@
             <!-- Nested Row within Card Body -->
             <div class="row justify-content-center">
               <div class="col-lg-6">
-                <div class="p-5">
+                <div class="p-5" style="padding: 2rem !important">
                   <div class="text-center">
                       <div class="cir"><i class="fas fa-check fa-2x bigCheck"></i></div>
                       <br>
@@ -58,15 +58,23 @@
                   </div>
                   <form class="user" method="post">
                       <div class="text-left">
-                        <div class="contextBody">
-                            <i class="fas fa-check spacey"></i>
-                          You won't be charged until after your 14 day trial ends.
-                        </div>
-                          <br>
-                        <div class="contextBody">
-                            <i class="fas fa-check spacey"></i>
-                          No commitments, cancel anytime.
-                        </div>
+                          <div class="row justify-content-center">
+                            <div class="col-1">
+                                <i class="fas fa-check spacey"></i>
+                            </div>
+                            <div class="col-10">
+                                <div class="contextBody">
+                                    <p>You won't be charged until after your 14 day trial ends.</p>
+                                </div>
+                            </div>
+                            <div class="w-100"></div>
+                            <div class="col-1"><i class="fas fa-check spacey"></i></div>
+                            <div class="col-10">                        
+                                <div class="contextBody">
+                                    <p>No commitments, cancel anytime.</p>
+                                </div>
+                            </div>
+                          </div>
                     </div>
                       <br>
                     <a href="plans" class="btn btn-danger btn-user btn-block signupText">
@@ -84,6 +92,93 @@
     </div>
 
   </div>
+    
+    
+<!-- Footer -->
+<footer class="page-footer font-small footerCustom">
+
+      <!-- Footer Links -->
+  <div class="container text-center">
+
+    <!-- Grid row -->
+    <div class="row justify-content-center">
+        
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Terms of use</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Privacy</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">FAQ</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 footerList">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4"></h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Help Center</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+    
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">
+      <a href="https://echelonfit.com/">© 2019 Echelon Fitness LLC. All rights reserved. Patent pending.</a> 
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+
 
   <!-- Bootstrap core JavaScript-->
   <script src="vendor/jquery/jquery.min.js"></script>
